src/app/globals.css
@import "tailwindcss";

:root {
  @apply bg-olive-100 text-olive-900 dark:bg-olive-900 dark:text-olive-100 scroll-smooth;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  .shiki,
  .shiki span {
    color: var(--shiki-dark) !important;
    background-color: var(--shiki-dark-bg) !important;
    /* Optional, if you also want font styles */
    font-style: var(--shiki-dark-font-style) !important;
    font-weight: var(--shiki-dark-font-weight) !important;
    text-decoration: var(--shiki-dark-text-decoration) !important;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Inter, sans-serif;
}

pre,
img {
  @apply rounded-xl;
}

pre {
  @apply p-4 self-stretch;
}

td,
th {
  @apply px-2 py-1 border;
}

hr {
  @apply h-px w-full bg-olive-900 dark:bg-olive-100;
}

h1,
h2,
h3 {
  @apply font-bold;
}

h1 {
  @apply text-4xl;
}

h2 {
  @apply text-3xl;
}

h3 {
  @apply text-2xl;
}

a {
  @apply transition-all duration-300 ease-in-out text-olive-900 dark:text-olive-300 font-bold;
}

a:hover {
  @apply text-black dark:text-white;
}

.navbutton {
  @apply transition-colors duration-300 ease-in-out p-3 border-2 rounded-full text-olive-900 dark:text-olive-300;
}

.navbutton:hover {
  @apply text-black dark:text-white;
}

.bigBadText {
  @apply text-8xl font-bold text-red-500;
}

